--- a/.github/workflows/deploy-local.yml
+++ b/.github/workflows/deploy-local.yml
@@ -18,11 +18,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Ensure .env files from secrets (optional)
-        shell: bash
+        shell: pwsh
         run: |
-          set -euo pipefail
-          if [[ -n "${{ secrets.DEV_ENV_B64 }}" ]]; then echo "${{ secrets.DEV_ENV_B64 }}" | base64 -d > .env; fi
-          if [[ -n "${{ secrets.DEV_ENV_PRIVATE_B64 }}" ]]; then echo "${{ secrets.DEV_ENV_PRIVATE_B64 }}" | base64 -d > .env.private; fi
+          $ErrorActionPreference = 'Stop'
+          if ($env:DEV_ENV_B64) {
+            [System.Convert]::FromBase64String($env:DEV_ENV_B64) | Set-Content -Encoding Byte .env
+          }
+          if ($env:DEV_ENV_PRIVATE_B64) {
+            [System.Convert]::FromBase64String($env:DEV_ENV_PRIVATE_B64) | Set-Content -Encoding Byte .env.private
+          }
 
       - name: Login to GHCR
         uses: docker/login-action@v3
