--- a/.github/workflows/deploy-local.yml
+++ b/.github/workflows/deploy-local.yml
@@ -11,6 +11,9 @@ jobs:
   deploy-local-dev:
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: self-hosted
+    defaults:
+      run:
+        shell: pwsh
     env:
       GH_OWNER: ${{ github.repository_owner }}
     steps:
