--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy-dev:
-    if: ${{ (github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch') && secrets.DEV_DEPLOY_HOST != '' && secrets.DEV_DEPLOY_USER != '' && secrets.DEV_DEPLOY_SSH_KEY != '' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,6 +21,7 @@ jobs:
           host: ${{ secrets.DEV_DEPLOY_HOST }}
           username: ${{ secrets.DEV_DEPLOY_USER }}
           key: ${{ secrets.DEV_DEPLOY_SSH_KEY }}
+          debug: true
           source: docker-compose.dev.deploy.yml
           target: ~/pro11/
 
@@ -30,6 +31,7 @@ jobs:
           host: ${{ secrets.DEV_DEPLOY_HOST }}
           username: ${{ secrets.DEV_DEPLOY_USER }}
           key: ${{ secrets.DEV_DEPLOY_SSH_KEY }}
+          debug: true
           script_stop: true
           script: |
             set -euo pipefail
