--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -4,7 +4,6 @@ on:
   workflow_run:
     workflows: ["docker-build"]
     types: [completed]
-    branches: [develop]
   workflow_dispatch:
     inputs:
       reason:
@@ -22,8 +21,8 @@ concurrency:
 
 jobs:
   deploy:
-    # Runs when docker-build for develop succeeded, or when manually dispatched.
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run.conclusion == 'success') }}
+    # Runs when docker-build completed successfully for develop, or when manually dispatched.
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'develop') }}
   # IMPORTANT: Ensure your remote machine's self-hosted runner has the label 'dev'.
   # Adjust labels below to match your runner labels.
   runs-on: [self-hosted, dev]
