--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -5,33 +5,23 @@ on:
     workflows: ["docker-build"]
     types: [completed]
   workflow_dispatch:
-    inputs:
-      reason:
-        description: "Reason for manual deploy (optional)"
-        required: false
-        type: string
 
 permissions:
   contents: read
   packages: read
 
-concurrency:
-  group: deploy-dev-runner
-  cancel-in-progress: false
-
 jobs:
   deploy:
-    # Runs when docker-build completed successfully for develop, or when manually dispatched.
     if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'develop') }}
     # IMPORTANT: Ensure your remote machine's self-hosted runner has the label 'dev'.
-    # Adjust labels below to match your runner labels.
-    runs-on: [self-hosted, dev]
+    runs-on:
+      - self-hosted
+      - dev
     env:
       COMPOSE_FILE: docker-compose.dev.deploy.yml
       COMPOSE_PROJECT_NAME: ${{ github.repository_owner }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -41,7 +31,6 @@ jobs:
         run: |
           set -euo pipefail
           cd "$GITHUB_WORKSPACE"
-          # Optional: materialize .env and .env.private from GitHub Secrets (base64-encoded)
           if [ -n "${{ secrets.DEV_ENV_B64 }}" ]; then echo "${{ secrets.DEV_ENV_B64 }}" | base64 -d > .env; fi
           if [ -n "${{ secrets.DEV_ENV_PRIVATE_B64 }}" ]; then echo "${{ secrets.DEV_ENV_PRIVATE_B64 }}" | base64 -d > .env.private; fi
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
@@ -55,7 +44,6 @@ jobs:
         run: |
           $ErrorActionPreference = 'Stop'
           Set-Location $env:GITHUB_WORKSPACE
-          # Optional: materialize .env and .env.private from GitHub Secrets (base64-encoded)
           if ('${{ secrets.DEV_ENV_B64 }}' -ne '') {
             $bytes = [System.Convert]::FromBase64String('${{ secrets.DEV_ENV_B64 }}')
             [System.Text.Encoding]::ASCII.GetString($bytes) | Out-File -FilePath .env -Encoding ascii -NoNewline
