--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,21 @@
 name: deploy
 
 on:
-  workflow_run:
-    workflows: ["docker-build"]
-    types: [completed]
-    branches: [main]
+  # Prod SSH 배포는 수동 + 명시적 토글일 때만 실행되도록 제한
   workflow_dispatch:
     inputs:
+      enable_ssh_prod:
+        description: 'Run PROD SSH deploy (use only when you intend to)'
+        type: boolean
+        required: true
+        default: false
       ref:
         description: 'Git ref to deploy'
         required: false
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.enable_ssh_prod == true }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
