--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,15 +1,18 @@
 name: deploy-dev
 
 on:
-  workflow_run:
-    workflows: ["docker-build"]
-    types: [completed]
-    branches: [develop]
-  workflow_dispatch: {}
+  # Manual only with explicit toggle; prevent unintended SSH usage from main
+  workflow_dispatch:
+    inputs:
+      enable_ssh_dev:
+        description: 'Run DEV SSH deploy (manual only)'
+        type: boolean
+        required: true
+        default: false
 
 jobs:
   deploy-dev:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.enable_ssh_dev == true }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
