--- a/.github/workflows/deploy-local.yml
+++ b/.github/workflows/deploy-local.yml
@@ -1,15 +1,18 @@
 name: deploy-local
 
 on:
-  workflow_run:
-    workflows: ["docker-build"]
-    types: [completed]
-    branches: [develop]
-  workflow_dispatch: {}
+  # Manual only with explicit toggle; do not run automatically from main
+  workflow_dispatch:
+    inputs:
+      enable_local:
+        description: 'Run local deploy (manual only)'
+        type: boolean
+        required: true
+        default: false
 
 jobs:
   deploy-local-dev:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.enable_local == true }}
     runs-on: self-hosted
     env:
       GH_OWNER: ${{ github.repository_owner }}
