ci(main): hard-disable all SSH-based dev/local deploys to stop scp attempts

--- a/.github/workflows/deploy-local.yml
+++ b/.github/workflows/deploy-local.yml
@@ -12,7 +12,8 @@ on:
 
 jobs:
   deploy-local-dev:
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.enable_local == true }}
+    # Hard disabled to prevent any SSH/scp attempts from main as well
+    if: ${{ false }}
     runs-on: self-hosted
     env:
       GH_OWNER: ${{ github.repository_owner }}
