--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -12,7 +12,8 @@ on:
 
 jobs:
   deploy-dev:
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.enable_ssh_dev == true }}
+    # Hard disabled to prevent any SSH/scp attempts from main as well
+    if: ${{ false }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
