--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -13,10 +13,9 @@ permissions:
 jobs:
   deploy:
     if: ${{ github.event_name == 'workflow_dispatch' || (github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'develop') }}
-    # IMPORTANT: Ensure your remote Windows self-hosted runner has labels: 'dev' and 'Windows'.
+    # IMPORTANT: Ensure your remote self-hosted runner has label: 'dev' (Windows runner recommended).
     runs-on:
       - self-hosted
-      - Windows
       - dev
     env:
       COMPOSE_FILE: docker-compose.dev.deploy.yml
