ci: add concurrency to docker-build to avoid cache reservation races

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,6 +18,10 @@ on:
       - '.github/workflows/docker-build.yml'
   workflow_dispatch: {}
 
+concurrency:
+  group: docker-build-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
   packages: write
