--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -31,22 +31,22 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Deploy on Windows runner (ExecutionPolicy Bypass)
+      - name: Deploy on Windows runner (policy-bypass)
         shell: cmd
-        run: |
-          powershell -NoProfile -ExecutionPolicy Bypass -Command "
-            $ErrorActionPreference = 'Stop';
-            Set-Location $env:GITHUB_WORKSPACE;
-            if ('${{ secrets.DEV_ENV_B64 }}' -ne '') {
-              $bytes = [System.Convert]::FromBase64String('${{ secrets.DEV_ENV_B64 }}');
-              [System.Text.Encoding]::ASCII.GetString($bytes) | Out-File -FilePath .env -Encoding ascii -NoNewline;
-            }
-            if ('${{ secrets.DEV_ENV_PRIVATE_B64 }}' -ne '') {
-              $bytes2 = [System.Convert]::FromBase64String('${{ secrets.DEV_ENV_PRIVATE_B64 }}');
-              [System.Text.Encoding]::ASCII.GetString($bytes2) | Out-File -FilePath .env.private -Encoding ascii -NoNewline;
-            }
-            $GHCR_USER = '${{ github.actor }}';
-            $GHCR_TOKEN = '${{ secrets.GITHUB_TOKEN }}';
+        run: >-
+          powershell -NoProfile -ExecutionPolicy Bypass -Command
+          "$ErrorActionPreference='Stop';
+          Set-Location $env:GITHUB_WORKSPACE;
+          if ('${{ secrets.DEV_ENV_B64 }}' -ne '') {
+            [System.Text.Encoding]::ASCII.GetString([System.Convert]::FromBase64String('${{ secrets.DEV_ENV_B64 }}')) | Out-File -FilePath .env -Encoding ascii -NoNewline
+          };
+          if ('${{ secrets.DEV_ENV_PRIVATE_B64 }}' -ne '') {
+            [System.Text.Encoding]::ASCII.GetString([System.Convert]::FromBase64String('${{ secrets.DEV_ENV_PRIVATE_B64 }}')) | Out-File -FilePath .env.private -Encoding ascii -NoNewline
+          };
+          '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u '${{ github.actor }}' --password-stdin;
+          docker compose -f %COMPOSE_FILE% pull;
+          docker compose -f %COMPOSE_FILE% up -d;
+          docker system prune -f"
             $GHCR_TOKEN | docker login ghcr.io -u $GHCR_USER --password-stdin;
             docker compose -f $env:COMPOSE_FILE pull;
             docker compose -f $env:COMPOSE_FILE up -d;
