ci(deploy): fix malformed cmd/ps mix; use PowerShell shell with process-scope policy bypass on main

--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -25,30 +25,25 @@ jobs:
       COMPOSE_PROJECT_NAME: ${{ github.repository_owner }}
     defaults:
       run:
-        shell: cmd
+        shell: powershell
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Deploy on Windows runner (policy-bypass)
-        shell: cmd
-        run: >-
-          powershell -NoProfile -ExecutionPolicy Bypass -Command
-          "$ErrorActionPreference='Stop';
-          Set-Location $env:GITHUB_WORKSPACE;
+      - name: Deploy on Windows runner (Process policy bypass)
+        shell: powershell
+        run: |
+          $ErrorActionPreference = 'Stop'
+          Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass -Force
+          Set-Location $env:GITHUB_WORKSPACE
           if ('${{ secrets.DEV_ENV_B64 }}' -ne '') {
             [System.Text.Encoding]::ASCII.GetString([System.Convert]::FromBase64String('${{ secrets.DEV_ENV_B64 }}')) | Out-File -FilePath .env -Encoding ascii -NoNewline
-          };
+          }
           if ('${{ secrets.DEV_ENV_PRIVATE_B64 }}' -ne '') {
             [System.Text.Encoding]::ASCII.GetString([System.Convert]::FromBase64String('${{ secrets.DEV_ENV_PRIVATE_B64 }}')) | Out-File -FilePath .env.private -Encoding ascii -NoNewline
-          };
-          '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u '${{ github.actor }}' --password-stdin;
-          docker compose -f %COMPOSE_FILE% pull;
-          docker compose -f %COMPOSE_FILE% up -d;
-          docker system prune -f"
-            $GHCR_TOKEN | docker login ghcr.io -u $GHCR_USER --password-stdin;
-            docker compose -f $env:COMPOSE_FILE pull;
-            docker compose -f $env:COMPOSE_FILE up -d;
-            docker system prune -f;
-          "
+          }
+          '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u '${{ github.actor }}' --password-stdin
+          docker compose -f $env:COMPOSE_FILE pull
+          docker compose -f $env:COMPOSE_FILE up -d
+          docker system prune -f
