ci(deploy): avoid PowerShell entirely on runner; use certutil for base64 env decoding (Windows)

--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Deploy on Windows runner (cmd + PS Bypass inline)
+      - name: Deploy on Windows runner (cmd + certutil only)
         shell: cmd
         env:
           DEV_ENV_B64: ${{ secrets.DEV_ENV_B64 }}
@@ -40,8 +40,16 @@ jobs:
           GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd %GITHUB_WORKSPACE%
-          if not "%DEV_ENV_B64%"=="" powershell -NoProfile -ExecutionPolicy Bypass -Command "[System.Text.Encoding]::ASCII.GetString([System.Convert]::FromBase64String($env:DEV_ENV_B64)) | Out-File -FilePath .env -Encoding ascii -NoNewline"
-          if not "%DEV_ENV_PRIVATE_B64%"=="" powershell -NoProfile -ExecutionPolicy Bypass -Command "[System.Text.Encoding]::ASCII.GetString([System.Convert]::FromBase64String($env:DEV_ENV_PRIVATE_B64)) | Out-File -FilePath .env.private -Encoding ascii -NoNewline"
+          if not "%DEV_ENV_B64%"=="" (
+            > .env.b64 echo %DEV_ENV_B64%
+            certutil -f -decode .env.b64 .env >NUL 2>&1
+            del /f /q .env.b64
+          )
+          if not "%DEV_ENV_PRIVATE_B64%"=="" (
+            > .env.private.b64 echo %DEV_ENV_PRIVATE_B64%
+            certutil -f -decode .env.private.b64 .env.private >NUL 2>&1
+            del /f /q .env.private.b64
+          )
           echo %GHCR_TOKEN% | docker login ghcr.io -u %GHCR_USER% --password-stdin
           docker compose -f %COMPOSE_FILE% pull
           docker compose -f %COMPOSE_FILE% up -d
