--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -23,6 +23,7 @@ jobs:
     env:
       COMPOSE_FILE: docker-compose.dev.deploy.yml
       COMPOSE_PROJECT_NAME: ${{ github.repository_owner }}
+      GH_OWNER: ${{ github.repository_owner }}
     defaults:
       run:
         shell: cmd
@@ -30,6 +31,19 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Diagnostics (env and Docker)
+        shell: cmd
+        run: |
+          cd %GITHUB_WORKSPACE%
+          echo GITHUB_WORKSPACE=%GITHUB_WORKSPACE%
+          echo GH_OWNER=%GH_OWNER%
+          echo COMPOSE_PROJECT_NAME=%COMPOSE_PROJECT_NAME%
+          echo COMPOSE_FILE=%COMPOSE_FILE%
+          docker --version
+          docker info
+          echo Listing workspace files:
+          dir /b
 
       - name: Deploy on Windows runner (cmd + certutil only)
         shell: cmd
