--- a/.github/workflows/deploy-dev-runner.yml
+++ b/.github/workflows/deploy-dev-runner.yml
@@ -67,4 +67,6 @@ jobs:
           echo %GHCR_TOKEN% | docker login ghcr.io -u %GHCR_USER% --password-stdin
           docker compose -f %COMPOSE_FILE% pull
           docker compose -f %COMPOSE_FILE% up -d
+          rem Run DB migrations inside the app container (best-effort)
+          docker compose -f %COMPOSE_FILE% exec -T app poetry run alembic -c alembic.ini upgrade head || echo Migration step skipped/failed
           docker system prune -f
