--- a/docker-compose.dev.deploy.yml
+++ b/docker-compose.dev.deploy.yml
@@ -16,7 +16,7 @@ services:
       retries: 10
     # Optional: expose to host for debugging
     ports:
-      - "55432:5432"
+      - "${DB_PORT:-55432}:5432"
 
   app:
     image: ghcr.io/${GH_OWNER:-${COMPOSE_PROJECT_NAME}}/pro11-backend:dev-latest
@@ -34,7 +34,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: traderpass
     ports:
-      - "8001:8000"
+      - "${APP_PORT:-8000}:8000"
     depends_on:
       db:
         condition: service_healthy
@@ -48,7 +48,7 @@ services:
     depends_on:
       - app
     ports:
-      - "8081:80"
+      - "${FRONTEND_PORT:-5173}:80"
     restart: unless-stopped
 
 volumes:
