--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -60,6 +60,7 @@ jobs:
           file: ./Dockerfile
           push: true
           provenance: false
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.IMAGE_BACKEND }}:latest
             ${{ env.IMAGE_BACKEND }}:${{ github.sha }}
@@ -74,6 +75,7 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           provenance: false
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.IMAGE_FRONTEND }}:latest
             ${{ env.IMAGE_FRONTEND }}:${{ github.sha }}
@@ -108,6 +110,7 @@ jobs:
           file: ./Dockerfile
           push: true
           provenance: false
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.IMAGE_BACKEND }}:dev-latest
             ${{ env.IMAGE_BACKEND }}:dev-${{ github.sha }}
@@ -122,6 +125,7 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           provenance: false
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.IMAGE_FRONTEND }}:dev-latest
             ${{ env.IMAGE_FRONTEND }}:dev-${{ github.sha }}
