--- a/frontend/nginx.prod.conf
+++ b/frontend/nginx.prod.conf
@@ -27,6 +27,8 @@ http {
   server {
     listen 80;
     server_name _;
+    root /usr/share/nginx/html;
+    index index.html;
 
     # Health check
     location = /health.txt { add_header Cache-Control "no-store"; }
