--- a/docker-compose.dev.deploy.yml
+++ b/docker-compose.dev.deploy.yml
@@ -3,6 +3,7 @@ services:
   db:
     image: postgres:15
     container_name: pro11-postgres-dev
+    platform: ${PLATFORM:-linux/arm64/v8}
     environment:
       POSTGRES_DB: mydata
       POSTGRES_USER: postgres
@@ -20,6 +21,7 @@ services:
   app:
     image: ghcr.io/${GH_OWNER:-${COMPOSE_PROJECT_NAME}}/pro11-backend:dev-latest
     container_name: pro11-app-dev
+    platform: ${PLATFORM:-linux/arm64/v8}
     env_file:
       - .env
       - .env.private
@@ -44,6 +46,7 @@ services:
   frontend:
     image: ghcr.io/${GH_OWNER:-${COMPOSE_PROJECT_NAME}}/pro11-frontend:dev-latest
     container_name: pro11-frontend-dev
+    platform: ${PLATFORM:-linux/arm64/v8}
     environment:
       BACKEND_ORIGIN: http://app:8000
     depends_on:
