--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -156,6 +156,28 @@
 				"$eslint-stylish"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Reload Backend (uvicorn)",
+			"type": "shell",
+			"command": "bash",
+			"args": [
+				"-lc",
+				"pkill -f 'uvicorn.*backend.apps.api.main:app' || true; sleep 1; python -m uvicorn backend.apps.api.main:app --host 0.0.0.0 --port 8000 --reload"
+			],
+			"isBackground": true,
+			"group": "build"
+		},
+		{
+			"label": "Reload Backend (uvicorn)",
+			"type": "shell",
+			"command": "bash",
+			"args": [
+				"-lc",
+				"pkill -f 'uvicorn.*backend.apps.api.main:app' || true; sleep 1; python -m uvicorn backend.apps.api.main:app --host 0.0.0.0 --port 8000 --reload"
+			],
+			"isBackground": true,
+			"group": "build"
 		}
 	]
 }
