--- a/docker-compose.dev.deploy.yml
+++ b/docker-compose.dev.deploy.yml
@@ -19,9 +19,10 @@ services:
       - "${DB_PORT:-55432}:5432"
 
   app:
-    image: ghcr.io/${GH_OWNER:-${COMPOSE_PROJECT_NAME}}/pro11-backend:dev-latest
+    image: ghcr.io/${GH_OWNER:-${COMPOSE_PROJECT_NAME}}/pro11-backend:${BACKEND_TAG:-dev-latest}
     container_name: pro11-app-dev
     platform: ${PLATFORM:-linux/arm64/v8}
+    pull_policy: always
     env_file:
       - .env
       - .env.private
@@ -44,9 +45,10 @@ services:
     restart: unless-stopped
 
   frontend:
-    image: ghcr.io/${GH_OWNER:-${COMPOSE_PROJECT_NAME}}/pro11-frontend:dev-latest
+    image: ghcr.io/${GH_OWNER:-${COMPOSE_PROJECT_NAME}}/pro11-frontend:${FRONTEND_TAG:-dev-latest}
     container_name: pro11-frontend-dev
     platform: ${PLATFORM:-linux/arm64/v8}
+    pull_policy: always
     environment:
       BACKEND_ORIGIN: http://app:8000
     depends_on:
